# microlibrary

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
ci/: analyze.sh  (+3 more)
dependencies/avr-libcpp/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
libraries/microlibrary/: CMakeLists.txt
libraries/microlibrary-version/: CMakeLists.txt
libraries/microlibrary-version/include/microlibrary/: version.h
libraries/microlibrary-version/source/microlibrary/: version.cc.in
libraries/microlibrary/ANY/: CMakeLists.txt
libraries/microlibrary/ANY/ANY/: CMakeLists.txt
libraries/microlibrary/ANY/ANY/include/: microlibrary.h
libraries/microlibrary/ANY/ANY/include/microlibrary/: algorithm.h  arm.h  array.h  assertion_failure.h  bit_manipulation.h  enum.h  error.h  format.h  integer.h  microchip.h  peripheral.h  pointer.h  postcondition.h  precondition.h  register.h  result.h  rom.h  stream.h  testing.h
libraries/microlibrary/ANY/ANY/include/microlibrary/arm/: cortex.h
libraries/microlibrary/ANY/ANY/include/microlibrary/microchip/: sam.h
libraries/microlibrary/ANY/ANY/source/: microlibrary.cc
libraries/microlibrary/ANY/ANY/source/microlibrary/: algorithm.cc  arm.cc  array.cc  assertion_failure.cc  bit_manipulation.cc  enum.cc  error.cc  format.cc  integer.cc  microchip.cc  peripheral.cc  pointer.cc  postcondition.cc  precondition.cc  register.cc  result.cc  rom.cc  stream.cc  testing.cc
libraries/microlibrary/ANY/ANY/source/microlibrary/arm/: cortex.cc
libraries/microlibrary/ANY/ANY/source/microlibrary/microchip/: sam.cc
libraries/microlibrary/ANY/DEVELOPMENT_ENVIRONMENT/: CMakeLists.txt
libraries/microlibrary/ANY/DEVELOPMENT_ENVIRONMENT/include/microlibrary/testing/: automated.h
libraries/microlibrary/ANY/DEVELOPMENT_ENVIRONMENT/include/microlibrary/testing/automated/: error.h  microchip.h  register.h  stream.h
libraries/microlibrary/ANY/DEVELOPMENT_ENVIRONMENT/source/microlibrary/testing/: automated.cc
libraries/microlibrary/ANY/DEVELOPMENT_ENVIRONMENT/source/microlibrary/testing/automated/: error.cc  microchip.cc  register.cc  stream.cc
libraries/microlibrary/ANY/HARDWARE/: CMakeLists.txt
libraries/microlibrary/ARM_CORTEX_M0PLUS/: CMakeLists.txt
libraries/microlibrary/ARM_CORTEX_M0PLUS/ANY/: CMakeLists.txt
libraries/microlibrary/ARM_CORTEX_M0PLUS/ANY/include/microlibrary/arm/cortex/: m0plus.h
libraries/microlibrary/ARM_CORTEX_M0PLUS/ANY/source/microlibrary/arm/cortex/: m0plus.cc
libraries/microlibrary/ARM_CORTEX_M0PLUS/DEVELOPMENT_ENVIRONMENT/: CMakeLists.txt
libraries/microlibrary/ARM_CORTEX_M0PLUS/HARDWARE/: CMakeLists.txt
libraries/microlibrary/CUSTOM/: CMakeLists.txt
libraries/microlibrary/CUSTOM/ANY/: CMakeLists.txt
libraries/microlibrary/CUSTOM/DEVELOPMENT_ENVIRONMENT/: CMakeLists.txt
libraries/microlibrary/CUSTOM/HARDWARE/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_MEGAAVR/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_MEGAAVR/ANY/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_MEGAAVR/ANY/include/microlibrary/microchip/: megaavr.h
libraries/microlibrary/MICROCHIP_MEGAAVR/ANY/source/microlibrary/microchip/: megaavr.cc
libraries/microlibrary/MICROCHIP_MEGAAVR/DEVELOPMENT_ENVIRONMENT/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_MEGAAVR/HARDWARE/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_MEGAAVR/HARDWARE/include/microlibrary/hil/: rom.h
libraries/microlibrary/MICROCHIP_MEGAAVR/HARDWARE/source/microlibrary/hil/: rom.cc
libraries/microlibrary/MICROCHIP_MEGAAVR0/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_MEGAAVR0/ANY/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_MEGAAVR0/ANY/include/microlibrary/microchip/: megaavr0.h
libraries/microlibrary/MICROCHIP_MEGAAVR0/ANY/include/microlibrary/microchip/megaavr0/: clock.h  clock_controller.h  peripheral.h  register.h  reset.h
libraries/microlibrary/MICROCHIP_MEGAAVR0/ANY/source/microlibrary/microchip/: megaavr0.cc
libraries/microlibrary/MICROCHIP_MEGAAVR0/DEVELOPMENT_ENVIRONMENT/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_MEGAAVR0/HARDWARE/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_SAM_D21DA1/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_SAM_D21DA1/ANY/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_SAM_D21DA1/DEVELOPMENT_ENVIRONMENT/: CMakeLists.txt
libraries/microlibrary/MICROCHIP_SAM_D21DA1/HARDWARE/: CMakeLists.txt
tests/automated/microlibrary/: CMakeLists.txt
tests/automated/microlibrary/algorithm/: CMakeLists.txt  main.cc
tests/automated/microlibrary/bit_manipulation/: CMakeLists.txt  main.cc
tests/automated/microlibrary/enum/: CMakeLists.txt  main.cc
tests/automated/microlibrary/error_code/: CMakeLists.txt  main.cc
tests/automated/microlibrary/fault_reporting_output_stream/: CMakeLists.txt  main.cc
tests/automated/microlibrary/fault_reporting_stream/: CMakeLists.txt  main.cc
tests/automated/microlibrary/fault_reporting_stream_io_driver/: CMakeLists.txt  main.cc
tests/automated/microlibrary/format/: CMakeLists.txt
tests/automated/microlibrary/format/dec/: CMakeLists.txt  main.cc
tests/automated/microlibrary/format/hex/: CMakeLists.txt  main.cc
tests/automated/microlibrary/format/hex_dump/: CMakeLists.txt  main.cc
tests/automated/microlibrary/generic_error/: CMakeLists.txt  main.cc
tests/automated/microlibrary/generic_error_category/: CMakeLists.txt  main.cc
tests/automated/microlibrary/integer/: CMakeLists.txt  main.cc
tests/automated/microlibrary/microchip/: CMakeLists.txt
tests/automated/microlibrary/microchip/megaavr0/: CMakeLists.txt
tests/automated/microlibrary/microchip/megaavr0/clock_controller/: CMakeLists.txt  main.cc
tests/automated/microlibrary/microchip/megaavr0/reset_controller/: CMakeLists.txt  main.cc
tests/automated/microlibrary/microchip/megaavr0/reset_source/: CMakeLists.txt  main.cc
tests/automated/microlibrary/output_stream/: CMakeLists.txt  main.cc
tests/automated/microlibrary/stream/: CMakeLists.txt  main.cc
tests/automated/microlibrary/stream_io_driver/: CMakeLists.txt  main.cc
(+81 files in other folders)
